# dratevka

./: CMakeLists.txt  README.md  main.c
config/: config.c  config.h
help/: help.c
include/: config.h  help.h
src/: config.c  help.c  prompt.c
src/include/: config.h  prompt.h
